@@ -40,7 +40,7 @@
 #ifdef	DOSCCS
 static char copyright[]
 = "@(#) Copyright (c) 2000, 2002 Gunnar Ritter. All rights reserved.\n";
-static char sccsid[]  = "@(#)mime.c	2.56 (gritter) 1/13/05";
+static char sccsid[]  = "@(#)mime.c	2.57 (gritter) 6/9/05";
 #endif /* DOSCCS */
 #endif /* not lint */
 
@@ -328,12 +328,6 @@ need_hdrconv(struct header *hp, enum gfield w)
 	}
 	if (w & GBCC) {
 		for (np = hp->h_bcc; np; np = np->n_flink)
-			if (has_highbit(np->n_name) ||
-					has_highbit(np->n_fullname))
-				goto needs;
-	}
-	if (w & GREPLYTO) {
-		for (np = hp->h_replyto; np; np = np->n_flink)
 			if (has_highbit(np->n_name) ||
 					has_highbit(np->n_fullname))
 				goto needs;
